fix(deploy): Set client_max_body_size to 10m

--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -28,3 +28,4 @@ ingress:
     nginx.ingress.kubernetes.io/server-snippet: |
       gzip on;
       gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    nginx.ingress.kubernetes.io/proxy-body-size: 50m
