feat(deploy): Switch to velo-cite.org

--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -21,7 +21,7 @@ service:
 
 ingress:
   className: nginx
-  host: pdv-auto.loicgombeaud.com
+  host: pdv-auto.velo-cite.org
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
