ci: Use 'basic' agent pool

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 jobs:
   - job: Hello_World
     pool:
-      vmImage: ubuntu-latest
+      name: basic
     steps:
     - script: echo Hello, world!
       displayName: 'Run a one-line script'
