Revert "ci: Use 'basic' agent pool"
This reverts commit 62adebccd9465ec72a7389ff3442d2bd01bef6fb.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 jobs:
   - job: Hello_World
     pool:
-      name: basic
+      vmImage: ubuntu-latest
     steps:
     - script: echo Hello, world!
       displayName: 'Run a one-line script'
